syntax = "proto3";
option  java_multiple_files = true;
option  java_package = "com.pro.grpc.models";
message Role{
  int32 diasNumber = 1;
}

message ServerResponse{
  int32 currentPosition=1;
  int32 currentServerPosition=2;
  string serverMessage=3;
  string clientMessage=4;
  int32  serverDiasNumber=5;

}
service  SnakeLadderService{

  rpc play(stream Role) returns (stream ServerResponse);
}